feat: Unit test correction